# TouchNet

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  install_cuda_cudnn.sh  pyproject.toml
.github/workflows/: lint.yaml  release.yaml  unit_test_cpu.yaml
docs/: LlamaForASR.md  audio_pretrain.md  audio_sft_asr.md  data.md  text_pretrain.md
examples/audio/pretrain/: README.md
examples/audio/pretrain/wenetspeech/: run.sh
examples/audio/pretrain/wenetspeech/config/: Llama-3.2-1B.json  Llama-3.2.json  Llama-3_2-1B.json  Llama-3_2.json
examples/audio/sft/asr/: README.md
examples/audio/sft/asr/aishell/: download_aishell.py  path.sh  run.sh
examples/audio/sft/asr/aishell/config/: Llama-3.2.json
examples/audio/sft/asr/librispeech/: path.sh  run.sh
examples/audio/sft/asr/librispeech/config/: Llama-3.2.json  Llama-3_2.json
examples/audio/sft/asr/wenetspeech/: path.sh  run.sh  touchnet
examples/audio/sft/asr/wenetspeech/config/: Kimi-Audio-7B.json  Llama-3.2-1B.json  Llama-3.2.json  Llama-3_2-1B.json  Llama-3_2.json  Qwen2-Audio-7B.json
examples/audio/sft/asr/wenetspeech/local/: extract_trans_and_pred.py
examples/debug/: download_c4.py  download_fineweb-edu.py  download_wikitext.py  path.sh  run.sh  touchnet  train.sh
examples/debug/config/: debug.json
examples/text/pretrain/: README.md
examples/text/pretrain/allenai_c4/: download_c4.py  path.sh  run.sh  touchnet
examples/text/pretrain/allenai_c4/config/: Llama-3.2-1B.json
examples/text/pretrain/fineweb-edu/: download_fineweb-edu.py  path.sh  run.sh
tests/assets/config/: tiny_llama.json
tests/assets/dataset/: data.jsonl
tests/touchnet/data/: test_dataloader.py
tests/touchnet/models/: test_llama.py
tests/touchnet/utils/: distributed_cpu.py  test_distributed_cpu.py  test_pack_loss.py
touchnet/: __init__.py
touchnet/data/: __init__.py  dataloader.py  datapipe.py  dataset.py  functions.py  processor.py
touchnet/loss/: __init__.py  cross_entropy.py
touchnet/models/: __init__.py  helper_func.py
touchnet/models/kimi_audio/: __init__.py  configuration_kimi_audio.py  inference_kimi_audio.py  modeling_kimi_audio.py  parallelize_kimi_audio.py  processing_kimi_audio.py
touchnet/models/llama/: __init__.py  configuration_llama.py  modeling_llama.py  parallelize_llama.py  pipeline_llama.py  processing_llama.py
touchnet/models/qwen2_audio/: __init__.py  inference_qwen2_audio.py  parallelize_qwen2_audio.py  processing_qwen2_audio.py
touchnet/models/touch_audio/: __init__.py  configuration_touch_audio.py  inference_touch_audio.py  modeling_touch_audio.py  parallelize_touch_audio.py  processing_touch_audio.py
touchnet/parallel_models/: helper_func.py
touchnet/parallel_models/llama/: __init__.py  parallelize_llama.py  pipeline_llama.py
touchnet/tokenizer/: __init__.py  tokenizer.py
touchnet/utils/: __init__.py  checkpoint.py  distributed.py  inference.py  logging.py  metrics.py  optimizer.py  profiling.py  train_spec.py
