# ---- All project specifications ---- #
[project]
name = "touchnet"
description = "A native-PyTorch library for large scale M-LLM (text/audio/video) training with tp/dp/sp/cp."
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = {file = "LICENSE"}
authors = [
    { name = "Xingchen Song", email = "sxc19@tsinghua.org.cn" },
]
keywords = ["pytorch", "training", "llm", "mllm"]
dependencies = [
    # Hugging Face integrations
    "datasets>=3.2.0",
    "transformers>=4.47.1",
    "tokenizers>=0.21.0",

    # Torch
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchdata>=0.10.1",

    # Miscellaneous
    "tomli>=1.1.0",
    "librosa",
]
dynamic = ["version"]

[project.urls]
GitHub = "https://github.com/xingchensong/TouchNet"
Documentation = "https://github.com/xingchensong/TouchNet/tree/main/docs"
Issues = "https://github.com/xingchensong/TouchNet/issues"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cov",
    "tensorboard",
]

[tool.setuptools.dynamic]
version = {file = "assets/version.txt"}


# ---- Explicit project build information ---- #
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [""]
include = ["touchnet*"]

[tool.setuptools.package-data]
recipes = ["examples/*.toml"]

[tool.pytest.ini_options]
addopts = ["--showlocals"]  # show local variables in tracebacks
