# ---- All project specifications ---- #
[project]
name = "touchnet"
description = "A native-PyTorch library for large scale M-LLM (text/audio) training with tp/dp/sp/cp."
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = {file = "LICENSE"}
authors = [
    { name = "Xingchen Song", email = "sxc19@tsinghua.org.cn" },
]
keywords = ["pytorch", "training", "llm", "mllm"]
dependencies = [
    # Hugging Face integrations
    "datasets==3.5.0",
    "transformers==4.51.3",
    "tokenizers==0.21.1",

    # Torch
    "torchdata>=0.11.0",
    "torch-tb-profiler>=0.4.3",

    # Miscellaneous
    "tomli>=1.1.0",
    "librosa>=0.11.0",
]
dynamic = ["version"]

[project.urls]
GitHub = "https://github.com/xingchensong/TouchNet"
Documentation = "https://github.com/xingchensong/TouchNet/tree/main/docs"
Issues = "https://github.com/xingchensong/TouchNet/issues"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cov",
    "tensorboard",
    "jedi",
    "autopep8",
    "pylint",
    "isort",
    "flake8",
]

[tool.setuptools.dynamic]
version = {file = "assets/version.txt"}


# ---- Explicit project build information ---- #
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [""]
include = ["touchnet*"]

[tool.setuptools.package-data]
recipes = ["examples/*.toml"]

[tool.pytest.ini_options]
addopts = ["--showlocals"]  # show local variables in tracebacks
